third_party/rust/chromium_crates_io/vendor/zerocopy-0.7.35/tests/ui-nightly/transmute-mut-src-not-asbytes.stderr
error[E0277]: the trait bound `Src: AsBytes` is not satisfied
  --> tests/ui-nightly/transmute-mut-src-not-asbytes.rs:24:36
   |
24 | const SRC_NOT_AS_BYTES: &mut Dst = transmute_mut!(&mut Src);
   |                                    ^^^^^^^^^^^^^^^^^^^^^^^^
   |                                    |
   |                                    the trait `AsBytes` is not implemented for `Src`
   |                                    required by a bound introduced by this call
   |
   = help: the following other types implement trait `AsBytes`:
             ()
             Dst
             F32<O>
             F64<O>
             I128<O>
             I16<O>
             I32<O>
             I64<O>
           and $N others
note: required by a bound in `AssertSrcIsAsBytes`
  --> tests/ui-nightly/transmute-mut-src-not-asbytes.rs:24:36
   |
24 | const SRC_NOT_AS_BYTES: &mut Dst = transmute_mut!(&mut Src);
   |                                    ^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `AssertSrcIsAsBytes`
   = note: this error originates in the macro `transmute_mut` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Src: AsBytes` is not satisfied
  --> tests/ui-nightly/transmute-mut-src-not-asbytes.rs:24:36
   |
24 | const SRC_NOT_AS_BYTES: &mut Dst = transmute_mut!(&mut Src);
   |                                    ^^^^^^^^^^^^^^^^^^^^^^^^ the trait `AsBytes` is not implemented for `Src`
   |
   = help: the following other types implement trait `AsBytes`:
             ()
             Dst
             F32<O>
             F64<O>
             I128<O>
             I16<O>
             I32<O>
             I64<O>
           and $N others
note: required by a bound in `AssertSrcIsAsBytes`
  --> tests/ui-nightly/transmute-mut-src-not-asbytes.rs:24:36
   |
24 | const SRC_NOT_AS_BYTES: &mut Dst = transmute_mut!(&mut Src);
   |                                    ^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `AssertSrcIsAsBytes`
   = note: this error originates in the macro `transmute_mut` (in Nightly builds, run with -Z macro-backtrace for more info)
